--- a/.github/workflows/githubAction.yml
+++ b/.github/workflows/githubAction.yml
@@ -27,14 +27,15 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install Jupyter and Micromamba
+      - name: Install and Setup Micromamba
         run: |
           "${SHELL}" <(curl -L micro.mamba.pm/install.sh)
           micromamba shell init --shell bash --root-prefix=~/micromamba
           export PATH="$HOME/micromamba/bin:$PATH"
-          micromamba install jupyter -y
-          micromamba create --file environment.yml --yes
+          micromamba create --name mlops --file environment.yml --yes
 
-      - name: Load Dataset
+      - name: Activate environment and Load Dataset
         run: |
-          micromamba run -n my_env jupyter nbconvert --to notebook --execute notebooks/01_load_dataset.ipynb
+          eval "$(micromamba shell hook --shell bash)"
+          micromamba activate mlops
+          jupyter nbconvert --to notebook --execute notebooks/01_load_dataset.ipynb
