--- a/.github/workflows/githubAction.yml
+++ b/.github/workflows/githubAction.yml
@@ -34,12 +34,19 @@ jobs:
           export PATH="$HOME/micromamba/bin:$PATH"
           micromamba create --name mlops --file environment.yml --yes
 
+      - name: Print working directory
+        run: pwd
+
+      - name: List files in the repository
+        run: ls -alR
+
       - name: Activate environment and Load Dataset
         run: |
-            eval "$(micromamba shell hook --shell bash)"
-            micromamba activate mlops
-            jupyter nbconvert --to notebook --execute Notebooks/dataset/1_load_data.ipynb
-          
+          eval "$(micromamba shell hook --shell bash)"
+          micromamba activate mlops
+          echo "Loading dataset from notebook..."
+          jupyter nbconvert --to notebook --execute --allow-errors "${GITHUB_WORKSPACE}/Notebooks/dataset/1_load_data.ipynb"
+
           
         
         
