--- a/.github/workflows/githubAction.yml
+++ b/.github/workflows/githubAction.yml
@@ -25,24 +25,29 @@ jobs:
       - name: Set up Python 3.11
         uses: actions/setup-python@v3
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install Jupyter and Micromamba
         run: |
-          curl -L micro.mamba.pm/install.sh | bash
+          "${SHELL}" <(curl -L micro.mamba.pm/install.sh)
           micromamba shell init --shell bash --root-prefix=~/micromamba
-          echo 'export PATH="$HOME/micromamba/bin:$PATH"' >> $GITHUB_ENV
-          source ~/micromamba/etc/profile.d/mamba.sh
+          export PATH="$HOME/micromamba/bin:$PATH"
           micromamba create --name mlops --file environment.yml --yes
-          echo 'micromamba activate mlops' >> $GITHUB_ENV
+           micromamba activate mlops
 
       - name: Print working directory
         run: pwd
 
-      - name: Load Dataset
+      - name: Activate environment and Load Dataset
         run: |
-          jupyter nbconvert --to notebook --execute --FilesWriter.build_directory=. "${GITHUB_WORKSPACE}/Notebooks/1_load_data.ipynb"
+          eval "$(micromamba shell hook --shell bash)"
+          micromamba activate mlops
+          echo "Loading dataset from notebook..."
+          jupyter nbconvert --to notebook --execute  --FilesWriter.build_directory=. "${GITHUB_WORKSPACE}/Notebooks/1_load_data.ipynb"
 
       - name: Feature Engineering
         run: |
-          jupyter nbconvert --to notebook --execute --FilesWriter.build_directory=. "${GITHUB_WORKSPACE}/Notebooks/feature_engineering.ipynb"
+          eval "$(micromamba shell hook --shell bash)"
+          micromamba activate mlops
+          echo "Starting feature engineering..."
+          jupyter nbconvert --to notebook --execute  --FilesWriter.build_directory=. "${GITHUB_WORKSPACE}/Notebooks/feature_engineering.ipynb"
