--- a/.github/workflows/githubAction.yml
+++ b/.github/workflows/githubAction.yml
@@ -44,3 +44,14 @@ jobs:
       - name: Feature Engineering
         run: |
           micromamba run -n mlops jupyter nbconvert --to notebook --execute --FilesWriter.build_directory=. "${GITHUB_WORKSPACE}/Notebooks/feature_engineering.ipynb"
+      - name: Train and Save Model
+        run: |
+          micromamba run -n mlops jupyter nbconvert --to notebook --execute --FilesWriter.build_directory=. "${GITHUB_WORKSPACE}/Notebooks/train_save_model.ipynb"
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.PASSWORD }}" | docker login -u "${{ secrets.DOCKERUSERNAME }}" --password-stdin
+
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKERUSERNAME }}/snowflakeadprediction:latest .
+        
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKERUSERNAME }}/snowflakeadprediction:latest
