--- a/.github/workflows/githubAction.yml
+++ b/.github/workflows/githubAction.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  data_processing:
+  MachineLearning_training:
     runs-on: ubuntu-latest
     env:
       SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
@@ -40,7 +40,7 @@ jobs:
           micromamba run -n mlops jupyter nbconvert --to notebook --execute --FilesWriter.build_directory=. "${GITHUB_WORKSPACE}/Notebooks/train_save_model.ipynb"
 
   build_and_push_docker:
-    needs: data_processing
+    needs: MachineLearning_training
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
